--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -6,13 +6,127 @@
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/utils.js"></script>
-    <script type="text/javascript" src="/components/data-tab.js"></script>
-
-    <link rel="stylesheet" href="/components/data-tab.css" type="text/css" />
   </head>
 
-  <body>
+  <body sbContext="ScoreBoard">
     <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
-    <div id="sbData"></div>
+    <div id="sbData">
+      <table class="UpDown">
+        <thead>
+          <tr class="Name">
+            <th colspan="4"><span>Operations</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="Content">
+            <td><a download id="downloadAll" sbButton>Download All Data</a></td>
+            <td><a download id="downloadSelected" sbButton>Download Selected</a></td>
+            <td><button sbCall="createRemoveSelectedDialog">Delete Selected</button></td>
+            <td>
+              <form method="post" enctype="multipart/form-data" target="UploadIframe">
+                <iframe id="UploadIframe" name="UploadIframe" style="display: none"></iframe>
+                <input type="file" name="file" sbButton sbCall="updateUploadButtons" />
+                <button class="UploadButton" sbCall="uploadJson">Import JSON</button>
+                <button class="UploadButton" sbCall="uploadXlsx">Import Statsbook</button>
+                <button class="UploadButton" sbCall="uploadBlankXlsx">Upload Blank Statsbook</button>
+                <div class="spinner Hide" sbClass="Hide: ImportsInProgress: !"></div>
+              </form>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="Type" id="games">
+        <thead>
+          <tr>
+            <th>
+              <button class="SelectAll Left" sbCall="selectAll">All</button>
+              <span>Games</span>
+              <button class="New Left" sbCall="newGame">New</button>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr sbForeach="Game:: compareName" sbAttr="name: Name" class="Content">
+            <td class="Name">
+              <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
+              <a download class="Download Left" sbAttr="href: Name: gameDlLink" sbButton>Download</a>
+              <a class="Edit Left" sbAttr="href: Name: gameEditLink" sbButton>Edit</a>
+              <span sbDisplay="Name"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="Type" id="teams">
+        <thead>
+          <tr>
+            <th>
+              <button class="SelectAll Left" sbCall="selectAll">All</button>
+              <span>Teams</span>
+              <button class="New Left" sbCall="newTeam">New</button>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr sbForeach="PreparedTeam:: compareName" sbAttr="name: FullName" class="Content">
+            <td class="Name">
+              <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
+              <a download class="Download Left" sbAttr="href: FullName: teamDlLink" sbButton>Download</a>
+              <a class="Edit Left" sbAttr="href: FullName: teamEditLink" sbButton>Edit</a>
+              <span sbDisplay="FullName"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="Type" id="rulesets" sbContext="Rulesets">
+        <thead>
+          <tr>
+            <th>
+              <button class="SelectAll Left" sbCall="selectAll">All</button>
+              <span>Rulesets</span>
+              <button class="New Left" sbCall="newRuleset">New</button>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr sbForeach="Ruleset:: orderRsAsTree" sbAttr="value: Id" class="Content">
+            <td class="Name">
+              <button class="Select Left" sbCall="select">Select</button>
+              <button class="Delete Left" sbProp="disabled: Readonly" sbCall="deleteElem">Delete</button>
+              <a download class="Download Left" sbAttr="href: Name: rulesetDlLink" sbButton>Download</a>
+              <a class="Edit Left" sbAttr="href: Name: rulesetEditLink" sbButton sbDisplay="Readonly: toEditButtonLabel"></a>
+              <span sbDisplay="Name: indentByParents: html"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="Type" id="operators" sbContext="Settings">
+        <thead>
+          <tr>
+            <th>
+              <button class="SelectAll Left" sbCall="selectAll">All</button>
+              <span>Operators</span>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr sbForeach="Setting:: compareName: part=3, filter=ScoreBoard.Operator, noId" sbAttr="name:: toOperatorName" class="Content">
+            <td class="Name">
+              <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
+              <a download class="Download Left" sbAttr="href:: operatorDlLink" sbButton>Download</a>
+              <span sbDisplay=": toOperatorName"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div id="Templates">
+      <div class="RemoveDataDialog">
+        <p>
+          This will delete <a class="Elements"></a> elements. You cannot undo this operation. (But you can reimport this data if you have it
+          stored in a JSON file.)
+        </p>
+        <p>Are you sure?</p>
+      </div>
+    </div>
   </body>
 </html>
