convert setting screen

--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -51,7 +51,7 @@
               <td class="Name" sbClass="Hide: Id: gameData"><input type="text" class="Name" sbControl="Name" /></td>
               <td class="Preview" sbClass="Hide: Id: gameData" sbDisplay="Id: toPreviewElem: html"></td>
               <td colspan="2" class="Src" sbClass="Hide: Id: noGameData" sbDisplay="Id"></td>
-              <td class="Download"><a download class="Download" sbAttr="href: Id: toDlPath" sbButton>Download</a></td>
+              <td class="Download"><a download class="Download" sbAttr="href: Id: toMediaPath" sbButton>Download</a></td>
             </tr>
           </tbody>
         </table>
