--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -6,12 +6,9 @@
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/json/WSutils.js"></script>
     <script type="text/javascript" src="/javascript/utils.js"></script>
-    <script type="text/javascript" src="/components/settings-tab.js"></script>
-
-    <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
   </head>
   <body>
     <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
-    <div id="ScoreBoardSettings" class="ui-widget"></div>
+    <div sbInclude="/components/settings-tab/" class="ui-widget"></div>
   </body>
 </html>
