convert teams tab

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -38,7 +38,7 @@
         </tr>
       </thead>
       <tbody
-        sbForeach="Device:: compareDeviceName"
+        sbForeach="Device:: compareDeviceName: resort=Name"
         sbAttr="name: Name"
         sbClass="HasComment: Comment: !== '' | HasWritten: Wrote: !== 0 | HasClients: NumClients: > 0 | Own: Id: isOwnId"
       >
