--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -46,7 +46,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr sbForeach="Game:: compareName" sbAttr="name: Name" class="Content">
+          <tr sbForeach="Game:: compareName: resort=Name" sbAttr="name: Name" class="Content">
             <td class="Name">
               <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
               <a download class="Download Left" sbAttr="href: Name: gameDlLink" sbButton>Download</a>
@@ -67,7 +67,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr sbForeach="PreparedTeam:: compareName" sbAttr="name: FullName" class="Content">
+          <tr sbForeach="PreparedTeam:: compareName: resort=FullName" sbAttr="name: FullName" class="Content">
             <td class="Name">
               <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
               <a download class="Download Left" sbAttr="href: FullName: teamDlLink" sbButton>Download</a>
@@ -88,7 +88,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr sbForeach="Ruleset:: orderRsAsTree" sbAttr="value: Id" class="Content">
+          <tr sbForeach="Ruleset:: orderRsAsTree: resort=Parent" sbAttr="value: Id" class="Content">
             <td class="Name">
               <button class="Select Left" sbCall="select">Select</button>
               <button class="Delete Left" sbProp="disabled: Readonly" sbCall="deleteElem">Delete</button>
