cleanup framework API

--- a/html/index.html
+++ b/html/index.html
@@ -197,7 +197,7 @@
             </li>
           </ul>
           <ul>
-            <li><a class="curGame" href="views/wb?game=">Penalty Whiteboard Display</a></li>
+            <li><a href="views/wb">Penalty Whiteboard Display</a></li>
             <li><a href="views/roster">Roster Display</a></li>
             <li><a href="custom/">Custom Screens</a></li>
           </ul>
@@ -223,13 +223,13 @@
             <li><a href="nso/jt">Jam Timer (Mobile Control)</a></li>
           </ul>
           <ul>
-            <li><a class="curGame" href="nso/pt?game=">Penalty Tracking</a></li>
+            <li><a class="curGame" href="nso/plt?pos=pt&team=both&game=">Penalty Tracking</a></li>
           </ul>
           <ul>
-            <li><a class="curGame" href="nso/lt?game=">Lineup Tracking</a></li>
+            <li><a class="curGame" href="nso/plt?pos=lt&game=">Lineup Tracking</a></li>
           </ul>
           <ul>
-            <li><a class="curGame" href="nso/plt?game=">Penalty + Lineup Tracking</a></li>
+            <li><a class="curGame" href="nso/plt?pos=plt&game=">Penalty + Lineup Tracking</a></li>
           </ul>
         </div>
         <div class="btn">
