--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit Ruleset | CRG ScoreBoard</title>
+    <title sbDisplay="ScoreBoard.Rulesets.Ruleset([ruleset]).Name: toTitle">Edit Ruleset | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/javascript/utils.js"></script>
-    <script type="text/javascript" src="/json/WSutils.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content" style="float: right; border: none"
-      >Back to overview page</a
-    >
-    <div id="RulesetsTab" class="ui-widget" sbInclude="/components/ruleset-tab/" sbAfterInclude="rulesetPostLoad"></div>
+    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
+    <div id="RulesetsTab" sbContext="ScoreBoard.Rulesets.Ruleset([ruleset])" class="ui-widget" sbInclude="/components/ruleset-tab/"></div>
   </body>
 </html>
