--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -4,12 +4,10 @@
     <title>Devices | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/json/WSutils.js"></script>
   </head>
   <body sbContext="ScoreBoard.Clients">
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div class="Buttons">
       <button class="Active" sbCall="toggleSelection">Comments</button>
       <button class="Active" sbCall="toggleSelection">Writers</button>
