--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -5,14 +5,10 @@
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/javascript/utils.js"></script>
-    <script type="text/javascript" src="/components/file-management-tab.js"></script>
-
-    <link rel="stylesheet" href="/components/file-management-tab.css" type="text/css" />
   </head>
 
   <body>
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a><br />
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a><br />
     <div id="tabsDiv" sbContext="ScoreBoard.Media">
       <ul id="fileTabBar">
         <li><a href="#images">Image</a></li>
