--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -5,11 +5,10 @@
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/javascript/utils.js"></script>
   </head>
 
   <body sbContext="ScoreBoard">
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div id="sbData">
       <table class="UpDown">
         <thead>
