--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -4,11 +4,9 @@
     <title>Settings | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/json/WSutils.js"></script>
-    <script type="text/javascript" src="/javascript/utils.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div sbInclude="/components/settings-tab/" class="ui-widget"></div>
   </body>
 </html>
