--- a/html/settings/teams/index.html
+++ b/html/settings/teams/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit Team | CRG ScoreBoard</title>
+    <title sbDisplay="ScoreBoard.PreparedTeam([team]).Name: toTitle">Edit Team | CRG ScoreBoard</title>
+
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/javascript/utils.js"></script>
-    <script type="text/javascript" src="/json/WSutils.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content" style="float: right; border: none"
-      >Back to overview page</a
-    >
-    <div class="PreparedTeam ui-widget" sbInclude="/components/team-editor/" sbAfterInclude="postTeamInit" sbContext="ScoreBoard"></div>
+    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
+    <div
+      class="PreparedTeam ui-widget"
+      sbInclude="/components/team-editor/"
+      sbContext="ScoreBoard.PreparedTeam([team])"
+      style="width: 100%"
+    ></div>
   </body>
 </html>
