--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -108,11 +108,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr sbForeach="Setting:: compareName: part=3, filter=ScoreBoard.Operator, noId" sbAttr="name:: toOperatorName" class="Content">
+          <tr sbForeach="Setting:: compareName: part=3, filter=ScoreBoard.Operator, noId" sbAttr="name:-: toOperatorName" class="Content">
             <td class="Name">
               <button class="Select Left" sbCall="select">Select</button> <button class="Delete Left" sbCall="deleteElem">Delete</button>
-              <a download class="Download Left" sbAttr="href:: operatorDlLink" sbButton>Download</a>
-              <span sbDisplay=": toOperatorName"></span>
+              <a download class="Download Left" sbAttr="href:-: operatorDlLink" sbButton>Download</a>
+              <span sbDisplay="-: toOperatorName"></span>
             </td>
           </tr>
         </tbody>
