--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -36,7 +36,7 @@
         (<a href="/documentation/wiki-snapshot.html#Scoreboard-Operation" target="_blank">Offline version</a>)
       </div>
       <div id="operatorIdDiv">Operator: <a id="operatorId"></a></div>
-      <a id="indexLink" href="/">Back to index page</a>
+      <a id="sbIndexLink" href="/">Back to index page</a>
       <div id="gameAdvance"></div>
       <ul id="tabBar"></ul>
     </div>
