--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -7,11 +7,11 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body sbContext="ScoreBoard.Clients">
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
+    <a id="sbIndexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div class="Buttons">
-      <button class="Active" sbCall="toggleSelection">Comments</button>
-      <button class="Active" sbCall="toggleSelection">Writers</button>
-      <button class="Active" sbCall="toggleSelection">Active</button>
+      <button class="sbActive" sbCall="toggleSelection">Comments</button>
+      <button class="sbActive" sbCall="toggleSelection">Writers</button>
+      <button class="sbActive" sbCall="toggleSelection">Active</button>
       <button sbCall="toggleSelection">Inactive</button>
     </div>
     <div>
