--- a/html/settings/teams/index.html
+++ b/html/settings/teams/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
+    <a id="sbIndexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
     <div
       class="PreparedTeam ui-widget"
       sbInclude="/components/team-editor/"
