--- a/html/index.html
+++ b/html/index.html
@@ -4,182 +4,9 @@
     <title>Main Menu | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/external/jquery-ui/jquery-ui.js"></script>
     <script type="text/javascript" src="/external/jquery-qrcode/jquery.qrcode.min.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <link rel="stylesheet" href="external/jquery-ui/css/default/jquery-ui.css" />
     <link rel="stylesheet" href="external/fontawesome/css/font-awesome.min.css" />
-
-    <script type="text/javascript">
-      $(function () {
-        $.get('/urls', function (data) {
-          var urls = data.trim();
-          if (!urls) {
-            $('#URLtext').html('<b>The scoreboard is not networked</b>.	 You can access it only from this computer.');
-          } else {
-            $.each(urls.split('\n'), function (i, e) {
-              $('<li>')
-                .append(
-                  $('<a>')
-                    .addClass('qrButton')
-                    .on('click', function () {
-                      $('#qrcode').empty().qrcode(e);
-                      $('.qrButton').removeClass('Active');
-                      $(this).addClass('Active');
-                    })
-                    .text('QR')
-                    .button()
-                )
-                .append($('<a>').attr('href', e).text(e))
-                .appendTo('#URLs');
-            });
-            $('a.qrButton').first().trigger('click');
-          }
-        });
-        WS.Register(['WS.Device.Id', 'WS.Device.Name', 'ScoreBoard.Clients.Device(*).Comment'], function (k, v) {
-          var name = WS.state['WS.Device.Name'];
-          var comment = WS.state['ScoreBoard.Clients.Device(' + WS.state['WS.Device.Id'] + ').Comment'];
-          if (comment) {
-            name += ' (' + comment + ')';
-          }
-          $('#deviceName').text(name);
-        });
-        WS.Register('ScoreBoard.CurrentGame.Game', function (k, v) {
-          var gId = v || '';
-          $('.curGame').each(function () {
-            var old = $(this).attr('href');
-            $(this).attr('href', old.substring(0, old.lastIndexOf('=') + 1) + v);
-          });
-        });
-        WS.AutoRegister();
-        WS.Connect();
-      });
-    </script>
-
-    <style>
-      body {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-        font-size: 2vmin;
-      }
-
-      a,
-      a:hover,
-      a:visited,
-      a:active {
-        color: darkblue;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-        color: red;
-        cursor: pointer;
-      }
-
-      table {
-        margin: 0;
-      }
-      td,
-      th {
-        vertical-align: top;
-        width: 25%;
-      }
-      .btn {
-        margin: 5px;
-        border: 1px inset #999;
-      }
-      .btn span {
-        display: inline-block;
-      }
-      .btn h2 span {
-        float: right;
-      }
-      span.pill {
-        display: inline-block;
-        margin: 0 10px;
-        background: red;
-        color: white;
-        border-radius: 10%;
-        font-size: 80%;
-        line-height: 80%;
-        padding: 3px;
-        border-radius: 4px;
-      }
-      .row {
-        width: 100%;
-        clear: both;
-      }
-      .column {
-        width: 25%;
-        float: left;
-      }
-
-      h1,
-      h2 {
-        color: white;
-        display: block;
-        font-size: 2vmin;
-        line-height: 4vmin;
-      }
-      .heading h1 {
-        font-size: 4vmin;
-        line-height: 5vmin;
-        margin: 0;
-        text-align: center;
-      }
-      .btn h2 {
-        margin: 0 0 10px 0;
-        text-align: left;
-        padding: 4px 4px 4px 10px;
-      }
-      h1 img {
-        margin-top: 4px;
-        float: left;
-        height: 80px;
-        opacity: 0.8;
-      }
-
-      ul {
-        -webkit-padding-start: 0;
-        list-style: none;
-        font-size: 80%;
-      }
-      ul li {
-        display: block;
-        padding-left: 1em;
-        margin-left: 0;
-        text-indent: 0;
-      }
-      .qrButton {
-        font-size: 60%;
-      }
-      .qrButton.Active {
-        background: #0c0;
-      }
-      .footer {
-        font-size: 75%;
-        padding-top: 10px;
-        padding-bottom: 80px;
-        margin-top: 100px;
-        color: #333;
-        clear: both;
-      }
-      .footer a {
-        color: red;
-      }
-      h1,
-      h2 {
-        background-image: linear-gradient(to bottom, #282537 0%, #282537 10%, #999 100%);
-        /*
-      background: #282537;
-      background-image: -webkit-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-      background-image: -moz-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-      background-image: -o-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-      background-image: radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-        */
-      }
-    </style>
   </head>
 
   <body>
@@ -218,6 +45,9 @@
             <li>
               <a class="curGame" href="nso/sbo?game="><strong>Scoreboard Operator Panel</strong></a>
             </li>
+          </ul>
+          <ul>
+            <li><a class="curGame" href="nso/sk?game=">Scorekeeping</a></li>
           </ul>
           <ul>
             <li><a href="nso/jt">Jam Timer (Mobile Control)</a></li>
