--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
+    <a id="sbIndexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
     <div id="RulesetsTab" sbContext="ScoreBoard.Rulesets.Ruleset([ruleset])" class="ui-widget" sbInclude="/components/ruleset-tab/"></div>
   </body>
 </html>
