--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body>
-    <a id="indexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
+    <a id="sbIndexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div sbInclude="/components/settings-tab/" class="ui-widget"></div>
   </body>
 </html>
