--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -42,7 +42,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr sbForeach="File:: compareName: resort=Name" sbAttr="name: Name" class="Item">
+            <tr sbForeach="File:: name: resort=Name" sbAttr="name: Name" class="Item">
               <td class="Remove"><button class="Remove" sbCall="createRemoveDialog">Remove</button></td>
               <td class="Name" sbClass="sbHide: Id: gameData"><input type="text" class="Name" sbControl="Name" /></td>
               <td class="Preview" sbClass="sbHide: Id: gameData" sbDisplay="Id: toPreviewElem: html"></td>
