--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -44,19 +44,19 @@
             <div class="Title">Period</div>
             <div class="Number"><a class="Number" sbDisplay="Clock(Period).Number"></a></div>
           </div>
-          <div class="ui-block-b PeriodTime"><a class="Time" sbDisplay="Clock(Period).Time: toTime"></a></div>
+          <div class="ui-block-b PeriodTime"><a class="Time" sbDisplay="Clock(Period).Time: sbToTime"></a></div>
         </div>
         <div class="JamTime Time">
           <h2>Jam Time</h2>
-          <a class="Time" sbDisplay="Clock(Jam).Time: toTime"></a>
+          <a class="Time" sbDisplay="Clock(Jam).Time: sbToTime"></a>
         </div>
         <div class="LineupTime Time">
           <h2>Lineup Time</h2>
-          <a class="Time" sbDisplay="Clock(Lineup).Time: toTime"></a>
+          <a class="Time" sbDisplay="Clock(Lineup).Time: sbToTime"></a>
         </div>
         <div class="TimeoutTime Time">
           <h2>TIMEOUT Time</h2>
-          <a class="Time" sbDisplay="Clock(Timeout).Time: toTime"></a>
+          <a class="Time" sbDisplay="Clock(Timeout).Time: sbToTime"></a>
         </div>
         <div class="ui-grid-a">
           <div class="ui-block-a">
@@ -113,7 +113,7 @@
       </div>
 
       <div data-role="content">
-        <p class="Time"><a class="Time" sbDisplay="Clock(Period).Time: toTime"></a></p>
+        <p class="Time"><a class="Time" sbDisplay="Clock(Period).Time: sbToTime"></a></p>
         <hr />
         <p>
           <button class="TimeDown" data-inline="true" value="-1000">-1 sec</button>
