--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -16,54 +16,57 @@
         <li><a href="#custom">Custom Screens</a></li>
         <li><a href="#game-data">Game Files</a></li>
       </ul>
-      <div
-        sbForeach="Format: images, videos, custom, game-data: only"
-        sbAttr="id: Id | aria-hidden: Id: isNotImages"
-        sbCss="display: Id: noneIfNotImages"
-      >
-        <table sbForeach="Type" class="Type">
-          <col />
-          <col />
-          <col />
-          <col />
-          <thead>
-            <tr class="Type">
-              <th colspan="4">
-                <button class="ShowTable" sbCall="showTable">Show</button> <button class="HideTable" sbCall="hideTable">Hide</button>
-                <a class="Type"><span class="Label">Type: </span><span class="Type" sbDisplay="Id: getSubId"></span></a>
-                <button class="Upload Right" sbCall="createUploadDialog">Upload</button>
-              </th>
-            </tr>
-            <tr class="Controls">
-              <th class="Remove" />
-              <th class="Name">Name</th>
-              <th class="Preview" />
-              <th class="Download" />
-            </tr>
-          </thead>
-          <tbody>
-            <tr sbForeach="File:: name: resort=Name" sbAttr="name: Name" class="Item">
-              <td class="Remove"><button class="Remove" sbCall="createRemoveDialog">Remove</button></td>
-              <td class="Name" sbClass="sbHide: Id: gameData"><input type="text" class="Name" sbControl="Name" /></td>
-              <td class="Preview" sbClass="sbHide: Id: gameData" sbDisplay="Id: toPreviewElem: html"></td>
-              <td colspan="2" class="Src" sbClass="sbHide: Id: noGameData" sbDisplay="Id"></td>
-              <td class="Download"><a download class="Download" sbAttr="href: Id: toMediaPath" sbButton>Download</a></td>
-            </tr>
-          </tbody>
-        </table>
+      <div sbForeach="Format: images, videos, custom, game-data: only" sbAttr="id: Id | aria-hidden: Id: v !== 'images'">
+        <div sbForeach="Type" class="sbSegment">
+          <table class="sbGroup Type">
+            <col class="Download" />
+            <col class="Name" />
+            <col class="Preview" />
+            <col class="Remove" />
+            <thead>
+              <tr class="sbHeader Type">
+                <th colspan="3">
+                  <button class="ShowTable" sbCall="filShowTable">Show</button>
+                  <button class="HideTable" sbCall="filHideTable">Hide</button>
+                  <span class="Label">Type: <span class="Type" sbDisplay="Id: filGetSubId"></span></span>
+                </th>
+                <th>
+                  <button class="Upload Right" sbCall="filCreateUploadDialog">Upload</button>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr sbForeach="File:: name: resort=Name" sbAttr="name: Name" class="Item">
+                <td class="Download"><a download class="Download" sbAttr="href: Id: sbToMediaPath" sbButton>Download</a></td>
+                <td class="Name" sbClass="sbHide: Id: filIsGameData"><input type="text" class="Name" sbControl="Name" /></td>
+                <td class="Preview" sbClass="sbHide: Id: filIsGameData" sbDisplay="Id: filToPreviewElem: html"></td>
+                <td colspan="2" class="Src" sbClass="sbHide: Id: filNoGameData" sbDisplay="Id"></td>
+                <td class="Remove"><button class="Remove" sbCall="filCreateRemoveDialog">Remove</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
+
     <div id="sbTemplates">
-      <div class="UploadMediaDialog">
-        <div class="Upload"></div>
-        <p><a class="File">File: </a><input type="file" multiple class="File" /></p>
-        <p><a class="Status"></a></p>
+      <div class="UploadMediaDialog sbSegment">
+        <div class="sbGroup">
+          <div class="Upload"></div>
+          <p><span class="File">File: </span><input type="file" multiple class="File" /></p>
+          <p><span class="Status"></span></p>
+        </div>
       </div>
-      <div class="RemoveMediaDialog">
-        <p>Media File : <a class="File"></a></p>
-        <p class="Warning">This will delete the media file from your system. You cannot undo this operation.</p>
-        <p class="Confirm">Are you sure?</p>
-        <p class="Status"></p>
+
+      <div class="RemoveMediaDialog sbSegment" sbContext="ScoreBoard.Media.Format(*).Type(*).File(*)">
+        <div class="sbGroup">
+          <div>
+            <p>Media File : <span class="File" sbDisplay=":sbToMediaPath"></span></p>
+            <p class="Warning">This will delete the media file from your system. You cannot undo this operation.</p>
+            <p class="Confirm">Are you sure?</p>
+            <p class="Status"></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
